--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,7 +1,7 @@
 
 // Body
-//$body-bg: #f5f8fa;
-$body-bg: blue;
+$body-bg: #f5f8fa;
+//$body-bg: blue;
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
